[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Maglev - Google's consistent hashing algorithm"
documentation = "https://docs.rs/maglev"
edition = "2018"
homepage = "https://github.com/flier/rust-maglev"
keywords = ["google", "maglev", "consistent", "hashing"]
license = "Apache-2.0"
name = "maglev"
repository = "https://github.com/flier/rust-maglev.git"
version = "0.2.1"

[dependencies]
primal = "0.3"

[dev-dependencies]
fasthash = "0.4"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
